RESOLVED FIXED246979
AX: Improve Ref / RefPtr hygiene in WebAccessibilityObjectWrapperMac
https://bugs.webkit.org/show_bug.cgi?id=246979
Summary AX: Improve Ref / RefPtr hygiene in WebAccessibilityObjectWrapperMac
Tyler Wilcock
Reported 2022-10-24 17:42:09 PDT
Attachments
Patch (10.88 KB, patch)
2022-10-24 17:47 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-10-24 17:42:24 PDT
Tyler Wilcock
Comment 2 2022-10-24 17:42:49 PDT
Tyler Wilcock
Comment 3 2022-10-24 17:47:49 PDT
Darin Adler
Comment 4 2022-10-25 09:16:57 PDT
Comment on attachment 463208 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=463208&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:409 > + RefPtr<AXCoreObject> backingObject = [self baseUpdateBackingStore]; Just RefPtr would do. No need to write out <AXCoreObject> each time.
Tyler Wilcock
Comment 5 2022-10-25 09:22:33 PDT
(In reply to Darin Adler from comment #4) > Comment on attachment 463208 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=463208&action=review > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:409 > > + RefPtr<AXCoreObject> backingObject = [self baseUpdateBackingStore]; > > Just RefPtr would do. No need to write out <AXCoreObject> each time. I originally had that, but template inference didn't seem able to figure it out: OpenSource/Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1115:12: error: no viable constructor or deduction guide for deduction of template arguments of 'RefPtr' RefPtr backingObject = self.updateObjectBackingStore;
EWS
Comment 6 2022-10-25 10:04:03 PDT
Committed 255966@main (b036a036e04c): <https://commits.webkit.org/255966@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463208 [details].
Note You need to log in before you can comment on or make changes to this bug.